Bug 142713 - FILESAVE XLSX Secondary axis not saved in several chart types
Summary: FILESAVE XLSX Secondary axis not saved in several chart types
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2021-06-08 09:19 UTC by NISZ LibreOffice Team
Modified: 2025-10-16 09:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel with secondary chart axes enabled (26.84 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-06-08 09:19 UTC, NISZ LibreOffice Team
Details
The original file saved by Calc (12.77 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-06-08 09:20 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (139.88 KB, image/png)
2021-06-08 09:21 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document side by side in Excel and Calc (105.73 KB, image/png)
2021-06-08 09:21 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-08 09:19:52 UTC
Created attachment 172694 [details]
Example file from Excel with secondary chart axes enabled

Attached Excel-made file contains a column, a bar, an area and a bubble chart with two data series. One data series is attached to the primary axis, the other to the secondary.
This opens fine in Calc, but saving to XLSX makes the secondary axes disappear and the charts layout change.

Steps to reproduce:
    1. Open attached file
    2. Save as XLSX
    3. Reload in Calc or Excel

Actual results:
Secondary axes disappear, the data series layout changes.

Expected results:
Secondary axes retained.

LibreOffice details:
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-08 09:20:40 UTC
Created attachment 172695 [details]
The original file saved by Calc
Comment 2 NISZ LibreOffice Team 2021-06-08 09:21:07 UTC
Created attachment 172696 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 3 NISZ LibreOffice Team 2021-06-08 09:21:48 UTC
Created attachment 172697 [details]
Screenshot of the exported document side by side in Excel and Calc
Comment 4 raal 2021-06-09 05:02:02 UTC
confirm with Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: ec629c5ee22d02f99d66a5cf975ce239876b7f4d
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2021-06-10 12:02:36 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b4c11350a631e27345e87ecfe258d12983cbfbc

tdf#142713 OOXML: export secondary axis of all chart types

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2021-07-05 11:22:08 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3964e0854507b2696ae0fbe48a4fb005c779947e
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: en-DK (hu_HU); UI: en-GB
Calc: threaded